NDI-79: Fix error message visibility on public page

--- a/scss/civicrm/common/_notifications.scss
+++ b/scss/civicrm/common/_notifications.scss
@@ -166,7 +166,7 @@
   }
 }
 
-#crm-main-content-wrapper form .messages.crm-error {
+.crm-container:not(.crm-public) #crm-main-content-wrapper form .messages.crm-error {
   position: absolute;
   visibility: hidden;
 }
